apps/bookinfo/details/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-canary
  labels:
    app: details
spec:
  type: ClusterIP
  selector:
    app: details
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      protocol: TCP
